--- a/Examen-Practico-2020-01-STUD.ipynb
+++ b/Examen-Practico-2020-01-STUD.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -188,7 +188,7 @@
        "4   5          0         No  3846350  3928279"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
     "#Carga del archivo csv\n",
     "data=pd.read_csv(filepath_or_buffer='./creditos_examen.csv', delimiter=';')\n",
     "#Primeros 5 registros\n",
-    "data[0:5]"
+    "data[0:5]\n"
    ]
   },
   {
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -258,9 +258,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -336,7 +336,7 @@
        "817  820          0        NaN  2721295   474662"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,6 +344,14 @@
    "source": [
     "estudiantes_null=data.loc[data.Estudiante.isna()]\n",
     "estudiantes_null"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solución\n",
+    "Estos registros los eliminaremos porque son muy pocos, sólo 5."
    ]
   },
   {
@@ -362,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -422,7 +430,7 @@
        "6851  -1          0         No  3196574   358943"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,6 +438,14 @@
    "source": [
     "id_negativos=data.loc[data.ID < 0]\n",
     "id_negativos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solución\n",
+    "Estos registros los eliminaremos porque son muy pocos"
    ]
   },
   {
@@ -448,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -468,39 +484,214 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Problema 4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['No', 'Si', nan, '1', '0'], dtype=object)"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pudo_pagar=data['Estudiante'].unique()\n",
-    "pudo_pagar"
+    "### Solución \n",
+    "Estos registros los eliminaremos porque son muy pocos"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Resumen de los problemas encontrados:\n",
-    "- Se encontro que \\[bla bla bla\\]. Para solucionar este problema se decidió que \\[bla bla bla\\], ya que considero que \\[bla bla bla\\]\n",
-    "- Se encontro que \\[bla bla bla\\]. Para solucionar este problema se decidió que \\[bla bla bla\\], ya que considero que \\[bla bla bla\\]\n",
-    "- Se encontro que \\[bla bla bla\\]. Para solucionar este problema se decidió que \\[bla bla bla\\], ya que considero que \\[bla bla bla\\]\n",
-    "- Se encontro que \\[bla bla bla\\]. Para solucionar este problema se decidió que \\[bla bla bla\\], ya que considero que \\[bla bla bla\\]"
+    "### Problema 4 y 5\n",
+    "El problema 4 y 5 es que en la columna Estudiante existen dos valores números: el 1 y el 0, los cuales no son válidos puesto que los valores que puede tener esta columna son Si y No."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La cantidad de 1's en la columna Estudiante es 3\n",
+      "La cantidad de 0's en la columna Estudiante es 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "pudo_pagar=data['Estudiante'].unique()\n",
+    "unos_pudo_pagar = data.loc[data.Estudiante == '1']\n",
+    "ceros_pudo_pagar = data.loc[data.Estudiante == '0']\n",
+    "print(\"La cantidad de 1's en la columna Estudiante es \"+ str(unos_pudo_pagar.shape[0]))\n",
+    "print(\"La cantidad de 0's en la columna Estudiante es \"+ str(ceros_pudo_pagar.shape[0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solución\n",
+    "Estos registros los procederemos a borrar ya que son sólo 6."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Problema 6\n",
+    "El problema 6 consiste en la existencia de deudas con valores negativos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El número de registros con deuda negativa es:999\n",
+      "Lo cual representa el: 9.99% de los datos de las deudas\n"
+     ]
+    }
+   ],
+   "source": [
+    "deuda_negativa = data.loc[data.Deuda < 0]\n",
+    "print(\"El número de registros con deuda negativa es:\" + str(deuda_negativa.shape[0]))\n",
+    "print(\"Lo cual representa el: \" + str(round((deuda_negativa.shape[0]/data.shape[0]) * 100, 2)) +\"% de los datos de las deudas\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solución\n",
+    "Debido a que la cantidad de información que perderíamos a eliminar estos registros ascendería al 10% de los datos, se propone reemplazar los valores negativos por el promedio de la deuda de los demás registros."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Problema 7\n",
+    "El problema 7 consiste en la existencia de un valor de Cuenta negativo."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>PudoPagar</th>\n",
+       "      <th>Estudiante</th>\n",
+       "      <th>Deuda</th>\n",
+       "      <th>Cuenta</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1499</th>\n",
+       "      <td>1500</td>\n",
+       "      <td>0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>5289225</td>\n",
+       "      <td>-22470634</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        ID  PudoPagar Estudiante    Deuda    Cuenta\n",
+       "1499  1500          0         No  5289225 -22470634"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "saldos_negativos = data.loc[data.Cuenta < 0]\n",
+    "saldos_negativos.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solución\n",
+    "Este registro se eliminará."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Limpieza de datos de los primeros 7 problemas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 9998 entries, 0 to 10001\n",
+      "Data columns (total 5 columns):\n",
+      "ID            9998 non-null int64\n",
+      "PudoPagar     9998 non-null int64\n",
+      "Estudiante    9998 non-null object\n",
+      "Deuda         9998 non-null int64\n",
+      "Cuenta        9998 non-null int64\n",
+      "dtypes: int64(4), object(1)\n",
+      "memory usage: 468.7+ KB\n",
+      "9986\n",
+      "El promedio de la dueda es: 4223137.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_clean=pd.read_csv(filepath_or_buffer='./creditos_examen_limpios.csv', delimiter=';')\n",
+    "df = pd.DataFrame(data_clean)\n",
+    "#Solución problema 1\n",
+    "data_clean = data_clean.loc[~data_clean.Estudiante.isna()]\n",
+    "data_clean.info()\n",
+    "#Solución problema 2\n",
+    "data_clean = data_clean.loc[~data_clean.ID < 0]\n",
+    "#Solución problema 3\n",
+    "data_clean = data_clean.drop_duplicates(subset='ID')\n",
+    "#Solución problema 4 y 5\n",
+    "data_clean = data_clean.loc[data.Estudiante != '1']\n",
+    "data_clean = data_clean.loc[data.Estudiante != '0']\n",
+    "print(str(data_clean.shape[0]))\n",
+    "#Solución problema 6\n",
+    "deudas_positivas = data_clean.loc[data.Deuda > 0]\n",
+    "promedio_deuda = np.round(pd.DataFrame(deudas_positivas)['Deuda'].mean())\n",
+    "print(\"El promedio de la dueda es: \" + str(promedio_deuda))\n"
    ]
   },
   {
@@ -509,6 +700,13 @@
    "source": [
     "## Corrección de problemas de datos"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
